--- a/app/src/main/res/layout/activity_room_detail.xml
+++ b/app/src/main/res/layout/activity_room_detail.xml
@@ -144,16 +144,16 @@
 
                     <LinearLayout
                         android:id="@+id/one"
-                        android:layout_width="100dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="12dp"
                         android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/image_deposit"
-
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="30dp"
+                            android:layout_gravity="center_horizontal"
                             android:src="@drawable/money"></ImageView>
 
                         <TextView
@@ -161,7 +161,7 @@
 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="30dp"
+                            android:layout_gravity="center_horizontal"
                             android:text="Đặt cọc"
                             android:textColor="@color/black"
                             android:textSize="14dp"></TextView>
@@ -172,7 +172,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
-
                             android:text="1 triệu"
                             android:textColor="#D2AF00"
                             android:textSize="16dp"></TextView>
@@ -182,7 +181,7 @@
                         android:id="@+id/two"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
+                        android:layout_marginLeft="17dp"
                         android:layout_toRightOf="@+id/one"
                         android:orientation="vertical">
 
@@ -190,7 +189,7 @@
                             android:id="@+id/image_electronic_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-
+                            android:layout_gravity="center_horizontal"
                             android:src="@drawable/electricity"></ImageView>
 
                         <TextView
@@ -223,7 +222,7 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
+                        android:layout_marginLeft="17dp"
                         android:layout_toRightOf="@+id/two"
                         android:orientation="vertical">
 
@@ -231,7 +230,7 @@
                             android:id="@+id/image_water_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-
+                            android:layout_gravity="center_horizontal"
                             android:src="@drawable/water"></ImageView>
 
 
@@ -264,7 +263,7 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
+                        android:layout_marginLeft="17dp"
                         android:layout_toRightOf="@+id/three"
                         android:orientation="vertical">
 
@@ -272,7 +271,7 @@
                             android:id="@+id/image_area"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-
+                            android:layout_gravity="center_horizontal"
                             android:src="@drawable/erae"></ImageView>
 
                         <TextView
