--- a/app/src/main/res/layout/activity_warm_detail.xml
+++ b/app/src/main/res/layout/activity_warm_detail.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/activity_constrain_layout"
+    android:padding="20dp"
     tools:context=".ui.warn.WarnDetail">
 
     <LinearLayout
@@ -22,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:padding="5dp"
+            android:paddingBottom="10dp"
             android:textSize="18sp"
             android:text="TextView" />
         <TextView
