--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
             android:background="@drawable/header_background"
             android:backgroundTint="@null"
             android:padding="10dp"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent">a
 
             <LinearLayout
                 android:weightSum="10"
