--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="300dp"
-    android:background="@drawable/back"
+    android:background="@drawable/back_500"
     android:gravity="bottom"
     android:padding="20dp">
     <androidx.cardview.widget.CardView
