--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,18 +28,18 @@
             app:menu="@menu/activity_main_drawer" />
     </androidx.drawerlayout.widget.DrawerLayout>
 
-    <com.github.mmin18.widget.RealtimeBlurView
-        android:id="@+id/realtimeBlurView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:realtimeBlurRadius="20dp"
-        app:realtimeOverlayColor="#74DAD8D8" />
+<!--    <com.github.mmin18.widget.RealtimeBlurView-->
+<!--        android:id="@+id/realtimeBlurView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:realtimeBlurRadius="20dp"-->
+<!--        app:realtimeOverlayColor="#74DAD8D8" />-->
 
-    <ProgressBar
-        android:id="@+id/pb_saving"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:maxWidth="50dp" />
+<!--    <ProgressBar-->
+<!--        android:id="@+id/pb_saving"-->
+<!--        style="?android:attr/progressBarStyle"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:maxWidth="50dp" />-->
 </FrameLayout>
